--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -28,14 +28,11 @@
         android:layout_below="@+id/passwordBox"
         android:textAlignment="center"/>
 
-    <Button
-        android:id="@+id/addUser"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/registerBtn"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/email"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="30dp"
-        android:text="Save Btn" />
-
+        android:text="register"
+        android:layout_below="@+id/email"/>
 
 </RelativeLayout>
