--- a/app/src/main/res/layout/raw_items.xml
+++ b/app/src/main/res/layout/raw_items.xml
@@ -34,7 +34,7 @@
 
 
                 <TextView
-                    android:id="@+id/id"
+                    android:id="@+id/username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="User Id"
@@ -42,7 +42,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/title"
+                    android:id="@+id/password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Title"
