delete api installed

--- a/app/src/main/res/layout/update_activity.xml
+++ b/app/src/main/res/layout/update_activity.xml
@@ -35,4 +35,12 @@
         android:text="Update"
         android:layout_below="@+id/email"/>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/deleteBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete"
+        android:layout_below="@+id/updateBtn"/>
+
+
 </RelativeLayout>
