--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -6,32 +6,37 @@
 
     <EditText
         android:id="@+id/nameBox"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:hint="Username"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
         android:layout_marginTop="100dp"
         android:textAlignment="center"/>
 
     <EditText
         android:id="@+id/passwordBox"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:hint="Password"
+        android:layout_centerInParent="true"
         android:layout_below="@+id/nameBox"
         android:textAlignment="center"/>
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:hint="email"
+        android:layout_centerInParent="true"
         android:layout_below="@+id/passwordBox"
         android:textAlignment="center"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/registerBtn"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:text="register"
         android:layout_below="@+id/email"/>
 
