--- a/app/src/main/res/layout/update_activity.xml
+++ b/app/src/main/res/layout/update_activity.xml
@@ -6,40 +6,48 @@
 
     <EditText
         android:id="@+id/nameBox"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:hint="Username"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
         android:layout_marginTop="100dp"
         android:textAlignment="center"/>
 
     <EditText
         android:id="@+id/passwordBox"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:hint="Password"
+        android:layout_centerInParent="true"
         android:layout_below="@+id/nameBox"
         android:textAlignment="center"/>
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:hint="email"
+        android:layout_centerInParent="true"
         android:layout_below="@+id/passwordBox"
         android:textAlignment="center"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/updateBtn"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Update"
+        android:text="Update User"
+        android:layout_marginTop="20dp"
+        android:layout_centerInParent="true"
         android:layout_below="@+id/email"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/deleteBtn"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Delete"
+        android:text="Delete User"
+        android:layout_marginTop="20dp"
+        android:layout_centerInParent="true"
         android:layout_below="@+id/updateBtn"/>
 
 
